yaml/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-dev
