yaml/frontend-dev.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: demo-dev
  name: frontend
  labels:
    tier: frontend
spec:
  containers:
  - name: production
    image: gcr.io/esoteric-virtue-88321/demo-frontend:latest
    command: ["/go/bin/redis-demo"]
    args:
      - "-is_production=false"
      - "-listen_addr=:80"
      - "-redis_addr=redis-svc.demo-prod:6379"
      - "-print_emoji=true"
    ports:
    - containerPort: 80
