yaml/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    tier: backend
  namespace: demo-prod
spec:
  containers:
  - name: redis
    image: redis
    ports:
    - containerPort: 6379
    resources:
      limits:
        cpu: "0.1"
