yaml/frontend-dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: demo-dev
spec:
  selector:
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
  type: LoadBalancer
