yaml/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: demo-prod
spec:
  selector:
    tier: backend
  ports:
  - protocol: TCP
    port: 6379
